nobase_dist_pkgdata_DATA = \
    README.md \
    c++/README.md \
    c++/classes \
    c++/comments \
    c++/defines \
    c++/directives \
    c++/doc_comments \
    c++/enums \
    c++/functions \
    c++/includes \
    c++/names \
    c++/namespaces \
    c++/strings \
    c++/structs \
    c++/typedefs \
    c++/zap_commands \
    c++/zap_comments \
    c++/zap_directives \
    c++/zap_strings \
    c/README.md \
    c/comments \
    c/defines \
    c/directives \
    c/doc_comments \
    c/enums \
    c/functions \
    c/includes \
    c/names \
    c/strings \
    c/structs \
    c/typedefs \
    c/zap_commands \
    c/zap_comments \
    c/zap_directives \
    c/zap_strings \
    cpp/README.md \
    cpp/classes \
    cpp/comments \
    cpp/defines \
    cpp/directives \
    cpp/doc_comments \
    cpp/enums \
    cpp/functions \
    cpp/includes \
    cpp/names \
    cpp/namespaces \
    cpp/strings \
    cpp/structs \
    cpp/typedefs \
    cpp/zap_commands \
    cpp/zap_comments \
    cpp/zap_directives \
    cpp/zap_strings \
    cs/README.md \
    cs/classes \
    cs/comments \
    cs/doc_comments \
    cs/enums \
    cs/functions \
    cs/names \
    cs/strings \
    cs/zap_comments \
    cs/zap_strings \
    html/README.md \
    html/comments \
    html/href \
    html/img \
    html/link \
    html/meta \
    html/pre \
    html/script \
    html/src \
    html/style \
    html/zap_comments \
    java/README.md \
    java/classes \
    java/comments \
    java/doc_comments \
    java/enums \
    java/imports \
    java/methods \
    java/names \
    java/strings \
    java/zap_comments \
    java/zap_strings \
    js/README.md \
    js/classes \
    js/comments \
    js/dom \
    js/functions \
    js/names \
    js/strings \
    js/zap_comments \
    js/zap_strings \
    json/README.md \
    json/keys \
    json/keys_and_values \
    json/values \
    markdown/README.md \
    markdown/code \
    markdown/codeblocks \
    markdown/images \
    markdown/links \
    markdown/sections \
    perl/README.md \
    perl/comments \
    perl/formats \
    perl/names \
    perl/strings \
    perl/subs \
    perl/zap_comments \
    perl/zap_formats \
    perl/zap_strings \
    php/README.md \
    php/comments \
    php/functions \
    php/names \
    php/strings \
    php/zap_comments \
    php/zap_html \
    php/zap_strings \
    python/README.md \
    python/comments \
    python/defs \
    python/doc_strings \
    python/imports \
    python/names \
    python/strings \
    python/zap_comments \
    python/zap_strings \
    ruby/README.md \
    ruby/classes \
    ruby/comments \
    ruby/defs \
    ruby/modules \
    ruby/names \
    ruby/strings \
    ruby/zap_comments \
    ruby/zap_strings \
    rust/README.md \
    rust/comments \
    rust/crates \
    rust/enums \
    rust/fns \
    rust/impls \
    rust/macros \
    rust/mods \
    rust/names \
    rust/strings \
    rust/structs \
    rust/traits \
    rust/unions \
    rust/uses \
    rust/zap_comments \
    rust/zap_strings \
    scala/README.md \
    scala/classes \
    scala/comments \
    scala/defs \
    scala/imports \
    scala/names \
    scala/objects \
    scala/packages \
    scala/strings \
    scala/zap_comments \
    scala/zap_strings \
    swift/README.md \
    swift/classes \
    swift/comments \
    swift/enums \
    swift/funcs \
    swift/imports \
    swift/names \
    swift/strings \
    swift/structs \
    swift/zap_comments \
    swift/zap_strings \
    xml/README.md \
    xml/attributes \
    xml/attributes_and_values \
    xml/comments \
    xml/elements \
    xml/pis \
    xml/tags \
    xml/zap_comments \
    xml/zap_pis \
    xml/zap_strings
